syntax = "proto3";

package com.zzsong.netty.protobuff.two;


option optimize_for = SPEED ;
option java_package = "com.zzsong.netty.protobuff.two";
option java_outer_classname = "ProtoData";

message MyDataInfo{

    enum DataType{
        PersonType = 0;
        DogType = 1;
        CarType = 2;
    }

    DataType dataType = 1;

    oneof dataBody{
        Person person = 2;
        Dog dog = 3;
        Car car = 4;
    }

}

message Person{
    int32 id = 1;
    string name = 2;
    bool normal = 3;
    enum Gender {
        UNKNOWN = 0;
        MALE = 1;
        FEMALE = 2;
    }
    Gender gender = 4;
}
message Dog{
    int32 type = 1;
    string name = 2;
}
message Car{
    string number = 1;
}

